[fix] Fix line spacing bug

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -98,6 +98,11 @@ body {
     min-height: 3.5rem;
     position: relative;
     overflow: visible;
+    margin-top: 0.35rem;
+}
+
+.expression-line:first-child {
+    margin-top: 0;
 }
 
 .expression-line:nth-child(even) {
